# whoopr

./: LICENSE  README.md  whoopr.cabal
src/: RIOMonadListSubscriptions.hs
src/Whoopr/: EventSender.hs  Subscribers.hs  TaskQueue.hs  ToByteString.hs
src/Whoopr/Basic/: RIOMonadListSubscriptions.hs  Subscription.hs  SubscriptionAPI.hs
