cabal-version:      2.4
name:               whoopr
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             Vojtech Balik
maintainer:         balikvo1@fit.cvut.cz

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Whoopr.Subscribers, Whoopr.ToByteString, Whoopr.TaskQueue, Whoopr.EventSender, Whoopr.Basic.SubscriptionAPI
        Whoopr.Basic.RIOMonadListSubscriptions, Whoopr.Basic.Subscription
    hs-source-dirs:   src
    default-extensions: NoImplicitPrelude
    build-depends:    base, protolude, time, servant, servant-server, servant-docs, aeson, wai, http-conduit, text, network-uri, uuid, async, bytestring, crypton, memory
    default-language: Haskell2010  